[package]
name = "quicksort"
version = "0.1.0"
authors = ["C <DeveloperC@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
pretty_env_logger = "0.4.0"

[dev-dependencies]
rstest = "0.6.2"
proptest = "0.9.6"
criterion = "0.3"
lazy_static = "1.4.0"

[[bench]]
name = "benchmark"
harness = false
