[package]
name = "quicksort"
version = "0.1.1"
authors = ["C <DeveloperC@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
rstest = "0.6.2"
proptest = "0.9.6"
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
