[package]
name = "quicksort"
version = "0.1.1"
authors = ["C <DeveloperC@protonmail.com>"]
edition = "2021"


[dependencies]


[dev-dependencies]
# For parameterized testing.
rstest = "=0.26.1"

# For property-based testing.
proptest = "=1.8.0"

# For benchmarking.
criterion = "=0.7.0"


[[bench]]
name = "benchmark"
harness = false


[profile.release]
lto = 'fat'
codegen-units = 1
